<?xml version="1.0"?>
<package format="2">
  <name>crypto</name>
  <version>1.0.0</version>
  <description>
    Layer-2 AES-CBC encryption for ROS topics. Companion code for
    "Proposed technique for Data Security with the AES Algorithm in
    Robot Operating System (ROS)"
    (https://ieeexplore.ieee.org/document/10329645).
  </description>

  <maintainer email="ultra_mcu@msn.com">MaIII</maintainer>

  <author email="teerapong.tana@kmutt.ac.th">Teerapong Tanadechopon</author>
  <author email="boontariga.kas@kmutt.ac.th">Boontariga Kasemsontitum</author>

  <license>MIT</license>

  <url type="repository">https://github.com/ultramcu/ROS-L2</url>
  <url type="paper">https://ieeexplore.ieee.org/document/10329645</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
